# crocerossa_qdrant_cloud

./: .gitignore  CLAUDE.md  ingest.py  ingest_qdrant.py  ingest_qdrant_new.py  ingest_single_file.py  main.py  main_rerank.py  parse_async_withdoc.py  pyproject.toml  qdrant_dashboard.py  realtime_demo.py  requirements.txt  retrieval.py  ruff.toml  search_keyword.py
.claude/: settings.local.json
data/: metadata.json
src/dashboard/: qdrant_dashboard.py
src/evaluation/: evaluate_rag.py  generate_dataset.py
src/ingest/: ingest_volontariato.py  smart_ingest.py  smart_ingest_hybrid.py
src/tools/: purge_excel.py  search_keyword.py  setup_text_index.py
static/: index.html
tests/: conftest.py  test_chunking.py  test_config.py  test_excel_parsing.py  test_metadata.py  test_qdrant_helpers.py
